<resources>
    <string name="app_name">MyProject</string>
    <string name="Java">Java</string>
    <string name="Android">Android</string>
    <string name="WhereIsDay">Where is day ?</string>
    <string name="ExpImageView">Не найдено ImageView</string>
    <string name="item1">Settings</string>
    <string name="myaudio">Audio</string>
    <string name="myvideo">Video</string>
    <string name="svideo">Secret Video</string>
    <string name="saudio">Secret Audio</string>
    <string name="checkbox">Секретное меню</string>
    <string name="Anim">Анимация кнопок и текста</string>
    <string name="Act">Другие активити доступны</string>
</resources>
